--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ kiwisolver==1.3.2
 matplotlib==3.4.3
 mccabe==0.6.1
 numpy==1.21.2
+pandas==1.3.4
 Pillow==8.4.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pyparsing==2.4.7
 python-dateutil==2.8.2
+pytz==2021.3
 scipy==1.7.1
 six==1.16.0
